@@ -3,9 +3,8 @@ require_once dirname(__FILE__) . "/test.environment.php";
 require_once dirname(__FILE__) . "/setup.php";
 
 S2ContainerClassLoader::import(SAMPLE_DIR);
-S2ContainerClassLoader::import(SAMPLE_DIR . "/dataset");
 S2ContainerClassLoader::import(SAMPLE_DIR . "/transaction");
-S2ContainerClassLoader::import(SAMPLE_DIR . "/transfer");
+S2ContainerClassLoader::import(SAMPLE_DIR . "/search");
 
 /**
  * @author nowel
@@ -20,7 +19,8 @@ class SampleTests {
     
     public static function suite(){
         $suites = new PHPUnit2_Framework_TestSuite("All Sample tests");
-        $suites->addTest(TransactionTest::suite());
+        //$suites->addTest(TransactionTest::suite());
+        $suites->addTest(SearchTest::suite());
         return $suites;
     }
 }
