@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE components PUBLIC "-//SEASAR//DTD S2Container//EN"
+"components21.dtd">
+<components namespace="search1">
+    <include path="%DAO_DICON%" />
+    <component class="SearchDao">
+        <aspect>dao.interceptor</aspect>
+    </component>
+</components>
